[package]
name = "bankir_models_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = "1.45.1"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
rsa = "0.10.0-rc.0"
deadpool-postgres = {version = "0.14.1", features = ["default"]}
tokio-postgres = {version = "0.7.13", features = ["with-chrono-0_4"]}
deadpool-redis = "0.21.1"
chrono = { version = "0.4.41", features = ["serde"] }
simd-json = "0.15.1"
serde_json = "1.0.140"
rust_decimal = "1.37.2"
bytes = {version = "1.10.1", features = ["default"]}
reqwest = "0.12.20"
tokio-retry2 = "0.5.7"
once_cell = "1.21.3"
thiserror = "2.0.12"